...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <EditText
            android:id="@+id/search_text"
            android:layout_weight="3"
            android:hint="输入关键字以搜索..."
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/search_button"
            android:layout_weight="1"
            android:text="搜索"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
...
