...
            android:id="@+id/rb_club"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_setting"
            android:text="社团"/>

        <RadioButton
            android:id="@+id/rb_account"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_channel"
            android:text="用户" />

        <RadioButton
            android:id="@+id/rb_message"
...
