...
            android:layout_weight="1"
            android:text="我关注的用户"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/find_account_button"
            android:layout_weight="1"
            android:text="发现更多用户"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
...
